# pyramid-demo

./: .gitignore  README.md  api.py  crud.py  models.py  pyproject.toml  settings.py  web.py
alembic/: env.py
alembic/versions/: 52e754162fc0_added_todos_table.py
docker/: .env.example  docker-compose.yml
docker/api/: Dockerfile
docker/web/: Dockerfile
packer/: demo.auto.pkrvars.hcl.example  demo.pkr.hcl
packer/files/: demo-app.service  docker-bootstrap.sh
src/: .env.example  alembic.ini
src/alembic/versions/: a7bafbf9c51b_added_done_field.py
src/templates/: layout.jinja2  list.jinja2  new.jinja2
templates/: layout.jinja2  list.jinja2  new.jinja2  read.jinja2
terraform/common/: output.tf  variables.tf.example
terraform/create_credentials/: main.tf
terraform/create_demo_user/: main.tf
terraform/create_instance/: main.tf
terraform/create_vm/: main.tf
terraform/credentials/: main.tf
terraform/deploy/: main.tf  output.tf
